[package]
name = "acoustid"
version = "0.0.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Library for the acoustid API"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
log = "0.4.16"
reqwest = { version = "0.11.10", features = ["gzip", "json", "rustls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha256 = "1.0.3"
thiserror = "1.0.30"
tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread"] }
tower = { version = "0.4.12", features = [ "limit", "util" ] }
url = "2.2.2"

[dev-dependencies]
mockito = "0.31.0"
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread"] }
