[package]
version = "0.1.0"
name = "backend"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Backend service for the music player"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
anyhow = { version = "~1", features = ["backtrace"] }
crumb-db = { path = "../db" }
futures = {version = "~0.3", default-features = false, features = ["alloc"]}
prost = "~0.9"
prost-types = "~0.9"
tokio = { version = "~1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "~0.6", features = [ "compression", "prost", "tls" ] }
tonic-web = "~0.2"
tracing = "~0.1"
tracing-subscriber = "~0.3"
uuid = "~0.8"

[build-dependencies]
tonic-build = { version = "~0.6", features = [ "compression" ] }
