[package]
version = "0.1.0"
name = "backend"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Backend service for the music player"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
crumb-db = { path = "../db" }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
prost = "0.10.1"
prost-types = "0.10.1"
rust_decimal = "1.21.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.8"
tonic = { version = "0.7.1", features = [ "compression", "prost", "tls" ] }
tonic-web = "0.3.0"
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
uuid = "0.8.2"

[build-dependencies]
tonic-build = { version = "0.7.0", features = ["compression"] }
