[package]
version = "0.1.0"
name = "backend"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Backend service for the music player"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
crumb-db = { path = "../db" }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
prost = "0.10.4"
prost-types = "0.10.1"
rust_decimal = "1.25.0"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.9"
tonic = { version = "0.7.2", features = [ "compression", "prost", "tls" ] }
tonic-web = "0.3.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
uuid = "1.1.2"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["compression"] }
