[package]
name = "crumb-db"
version = "0.0.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Database interface for the music player"
repository = "https://github.com/houseabsolute/music-player"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
anyhow = "~1"
env_logger = "~0.8"
futures-util = "~0.3"
itertools = "~0.10"
lazy-regex = "~2"
log = "~0.4"
once_cell = "~1"
thiserror = "~1"
time = "~0.2"
tokio = { version = "~1", features = ["full"] }
uuid = { version = "~0.8" }

[dependencies.sqlx]
version = "~0.5"
features = [
    "macros",
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "tls",
    "uuid",
]
