[package]
name = "crumb-db"
version = "0.0.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Database interface for the music player"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
futures-util = "0.3.21"
itertools = "0.10.3"
lazy-regex = "2.3.0"
log = "0.4.17"
once_cell = "1.13.0"
rust_decimal = "1.25.0"
thiserror = "1.0.31"
time = "0.3.11"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tracing = "0.1.35"
uuid = "1.1.2"

[dependencies.sqlx]
version = "0.6.0"
features = [
    "decimal",
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "tls",
    "uuid",
]
