[package]
version = "0.1.0"
name = "frontend"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Importer for the music player"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
# We need a version that works with tonic 0.6 - the released version uses
# tonic 0.4.3, which isn't compatible with the generated code from tonic-build
# 0.6.
grpc-web-client = { version = "~0.1", path = "../../grpc-web-client/grpc-web-client" }
prost = "~0.9"
seed = "~0.8"
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
thiserror = "~1"
tonic = { version = "~0.6", default-features = false, features = [ "codegen", "prost" ] }
typed-builder = "~0.9"
uuid = { version = "~0.8", features = ["v5"] }

[dependencies.web-sys]
version = "~0.3"
features = [
  "Navigator",
  "ScrollToOptions",
]

[build-dependencies]
tonic-build = { version = "~0.6", default-features = false, features = [ "prost", "rustfmt" ] }

# [profile.release]
# lto = true
# opt-level = 'z'
# codegen-units = 1

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-Os']
