[package]
name = "crumb-importer"
version = "0.0.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Importer for the music player"
repository = "https://github.com/houseabsolute/music-player"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
acoustid = { path = "../acoustid" }
anyhow = { version = "~1", features = ["backtrace"] }
blake3 = "~1.2"
clap = "3.0.0-beta"
crumb-db = { path = "../db" }
fern = { version = "~0.6", features = ["colored"] }
id3 = "~0.6"
itertools = "~0.10"
jwalk = "~0.6"
log = "~0.4"
magic = "~0.12"
mime = "~0.3"
mime-detective = "~1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
#sha256 = "~1"
tokio = { version = "~1", default-features = false, features = ["macros", "rt-multi-thread", "tracing"] }
uuid = { version = "~0.8" }

# chromaprint = "~0.1"
# minimp3 = "~0.5"
