[package]
name = "crumb-importer"
version = "0.0.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Importer for the music player"
repository = "https://github.com/houseabsolute/Crumb"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
acoustid = { path = "../acoustid" }
anyhow = { version = "1.0.56", features = ["backtrace"] }
blake3 = "1.3.1"
clap = "3.1.8"
crumb-db = { path = "../db" }
fern = { version = "0.6.0", features = ["colored"] }
id3 = "1.0.2"
itertools = "0.10.3"
jwalk = "0.6.0"
log = "0.4.16"
magic = "0.12.2"
mime = "0.3.16"
mime-detective = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
#sha256 = "~1"
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "tracing"] }
uuid = "0.8.2"

# chromaprint = "~0.1"
# minimp3 = "~0.5"
