[package]
name = "web-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../dioxus", features = [ "router", "web" ] }
#dioxus = { version = "0.2.0", features = ["router", "web"] }
dioxus-heroicons = { path = "../../dioxus-heroicons" }
futures-channel = "0.3.21"
futures-util = "0.3.21"
gloo-storage = "~0.2"
gloo-utils = "0.1.2"
#grpc-web-client = { version = "~0.1", git = "https://github.com/titanous/grpc-web-client", rev = "dd15cde2f36ab10546c332a7bbcb55b1738018a5" }
grpc-web-client = { version = "~0.1", path = "../../grpc-web-client/grpc-web-client" }
#log = "0.4.14"
log = { path = "../../log" }
prost = "~0.9"
prost-types = "~0.9"
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
tailwindcss-to-rust-macros = { path = "../../tailwindcss-to-rust/macros" }
thiserror = "~1"
tonic = { version = "~0.6", default-features = false, features = [ "codegen", "prost" ] }
typed-builder = "~0.9"
uuid = { version = "~0.8", features = [ "v4", "v5", "wasm-bindgen" ] }
wasm-bindgen = "~0.2"
#wasm-logger = "0.2.0"
wasm-logger = { path = "../../wasm-logger" }

[dependencies.web-sys]
version = "0.3.56"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "HtmlAudioElement",
    "HtmlElement",
    "Window",
]

[build-dependencies]
tonic-build = { version = "~0.6", default-features = false, features = [ "prost", "rustfmt" ] }

[features]
