[package]
name = "web-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../dioxus", features = [ "router", "web" ] }
#dioxus = { version = "0.2.0", features = ["router", "web"] }
dioxus-heroicons = { path = "../../dioxus-heroicons" }
futures-channel = "0.3.21"
futures-util = "0.3.21"
gloo-storage = "0.2.0"
gloo-utils = "0.1.2"
#grpc-web-client = { version = "~0.1", git = "https://github.com/titanous/grpc-web-client", rev = "dd15cde2f36ab10546c332a7bbcb55b1738018a5" }
grpc-web-client = { version = "~0.1", path = "../../grpc-web-client/grpc-web-client" }
log = "0.4.16"
prost = "0.10.1"
prost-types = "0.10.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tailwindcss-to-rust-macros = { path = "../../tailwindcss-to-rust/macros" }
thiserror = "1.0.30"
tonic = { version = "0.7.1", default-features = false, features = ["codegen", "prost"] }
typed-builder = "0.10.0"
uuid = { version = "0.8.2", features = ["v4", "v5", "wasm-bindgen"] }
wasm-bindgen = "0.2.80"
#wasm-logger = "0.2.0"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.57"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "HtmlAudioElement",
    "HtmlElement",
    "Window",
]

[build-dependencies]
tonic-build = { version = "0.7.0", default-features = false, features = ["prost"] }

[features]
